add: update password & fcmtoken
