# docs/swagger.yaml
@@ -144,6 +144,45 @@ paths:
       summary: Register new User
       tags:
       - AccountHandler
+  /v1/update/fcm:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Generate Access Token (JWT).
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: firebase cloun messaging token
+        in: formData
+        name: fcm_token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: CREATED_RESPOND
+          schema:
+            $ref: '#/definitions/utils.SuccessRespond'
+        "400":
+          description: BAD_REQUEST_RESPOND
+          schema:
+            $ref: '#/definitions/utils.ErrorRespond'
+        "422":
+          description: UNPROCESSABLE_ENTITY_RESPOND
+          schema:
+            $ref: '#/definitions/utils.ValidationErrorRespond'
+        "500":
+          description: INTERNAL_SERVER_ERROR_RESPOND
+          schema:
+            $ref: '#/definitions/utils.ErrorRespond'
+      summary: Update FCM TOKEN
+      tags:
+      - AccountHandler
   /v1/users:
     get:
       description: Get User List.
